--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 
 }
 .wrapper {
-    width: 1100px;
+    width: 1000px;
     margin: 0 auto;
 }
 
@@ -70,7 +70,6 @@ h1:hover {
 
 .top-nav {
     font-family:'PT Sans', sans-serif; 
-    font-weight: bold;
     font-size: 1.2em;
     display: flex;
     justify-content: space-between;
@@ -83,7 +82,7 @@ h1:hover {
 }
 
 .top-nav a:hover {
-    color: purple;
+    color: rgb(184, 84, 184);
 }
 
 .wrapper-grid {
@@ -141,7 +140,7 @@ a {
 #about-text-section {
     width: 450px;
     color: white;
-    text-align: center;
+    text-align: left;
     padding: 10px;
 }
 
@@ -167,10 +166,10 @@ h4 {
 }
 
 a:hover {
-    color: rgb(179, 2, 179);
+    color: rgb(184, 84, 184);
 }
 h4:hover {
-    color: purple;
+    color: rgb(184, 84, 184);
 }
 
 footer {
@@ -211,15 +210,15 @@ h3 {
 }
 
 .sub-p {
-    margin-left: 70px;
+    text-align: left;
 }
 .hl {
     height: 50px;
-    background-color: rgb(51, 2, 51);
+    background-color: rgb(105, 25, 105);
 }
 .hl-2 {
     height: 20px;
-    background-color: rgb(51,2,51);
+    background-color: rgb(105, 25, 105);
 }
 
 .sub-img-about {
@@ -252,7 +251,7 @@ p {
 .underline {
     text-decoration:underline;
     font-weight: bold;
-    color:rgb(131, 9, 131);
+    color:rgb(145, 65, 145);
 }
 
 .sub-titles {
